k8s/manifests-12117d/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-12117d
  namespace: journee
  labels:
    app: journee-12117d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-12117d
  template:
    metadata:
      labels:
        app: journee-12117d
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-12117d
          image: gcr.io/my-docker-471807/journee:12117d-afc7d9
          ports:
            - containerPort: 3000
