k8s/manifests-12117d/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-12117d
  namespace: journee
spec:
  selector:
    app: journee-12117d
  ports:
    - port: 80
      targetPort: 3000
